; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_sockbuf.c_sbappendcontrol.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_sockbuf.c_sbappendcontrol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockbuf = type { i32 }
%struct.mbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sbappendcontrol(%struct.sockbuf* %0, %struct.mbuf* %1, %struct.mbuf* %2) #0 {
  %4 = alloca %struct.sockbuf*, align 8
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.mbuf*, align 8
  store %struct.sockbuf* %0, %struct.sockbuf** %4, align 8
  store %struct.mbuf* %1, %struct.mbuf** %5, align 8
  store %struct.mbuf* %2, %struct.mbuf** %6, align 8
  %7 = load %struct.sockbuf*, %struct.sockbuf** %4, align 8
  %8 = call i32 @SOCKBUF_LOCK(%struct.sockbuf* %7)
  %9 = load %struct.sockbuf*, %struct.sockbuf** %4, align 8
  %10 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %11 = load %struct.mbuf*, %struct.mbuf** %6, align 8
  %12 = call i32 @sbappendcontrol_locked(%struct.sockbuf* %9, %struct.mbuf* %10, %struct.mbuf* %11)
  %13 = load %struct.sockbuf*, %struct.sockbuf** %4, align 8
  %14 = call i32 @SOCKBUF_UNLOCK(%struct.sockbuf* %13)
  ret void
}

declare dso_local i32 @SOCKBUF_LOCK(%struct.sockbuf*) #1

declare dso_local i32 @sbappendcontrol_locked(%struct.sockbuf*, %struct.mbuf*, %struct.mbuf*) #1

declare dso_local i32 @SOCKBUF_UNLOCK(%struct.sockbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
